@@ -10,6 +10,7 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import tachyon.TachyonURI;
 import tachyon.master.MasterInfo;
 import tachyon.thrift.ClientFileInfo;
 import tachyon.thrift.InvalidPathException;
@@ -19,7 +20,7 @@ import tachyon.thrift.InvalidPathException;
  */
 public class WebInterfaceMemoryServlet extends HttpServlet {
   private static final long serialVersionUID = 4293149962399443914L;
-  private MasterInfo mMasterInfo;
+  private final transient MasterInfo mMasterInfo;
 
   public WebInterfaceMemoryServlet(MasterInfo masterInfo) {
     mMasterInfo = masterInfo;
@@ -28,10 +29,8 @@ public class WebInterfaceMemoryServlet extends HttpServlet {
   /**
    * Populates attributes before redirecting to a jsp.
    * 
-   * @param request
-   *          The HttpServletRequest object
-   * @param response
-   *          The HttpServletReponse object
+   * @param request The HttpServletRequest object
+   * @param response The HttpServletReponse object
    */
   @Override
   public void doGet(HttpServletRequest request, HttpServletResponse response)
@@ -39,11 +38,11 @@ public class WebInterfaceMemoryServlet extends HttpServlet {
     request.setAttribute("masterNodeAddress", mMasterInfo.getMasterAddress().toString());
     request.setAttribute("fatalError", "");
 
-    List<String> inMemoryFiles = mMasterInfo.getInMemoryFiles();
+    List<TachyonURI> inMemoryFiles = mMasterInfo.getInMemoryFiles();
     Collections.sort(inMemoryFiles);
 
     List<UiFileInfo> fileInfos = new ArrayList<UiFileInfo>(inMemoryFiles.size());
-    for (String file : inMemoryFiles) {
+    for (TachyonURI file : inMemoryFiles) {
       try {
         ClientFileInfo fileInfo = mMasterInfo.getClientFileInfo(file);
         if (fileInfo != null && fileInfo.getInMemoryPercentage() == 100) {
@@ -55,7 +54,7 @@ public class WebInterfaceMemoryServlet extends HttpServlet {
         return;
       }
     }
-    request.setAttribute("inMemoryFileNum", new Integer(fileInfos.size()));
+    request.setAttribute("inMemoryFileNum", Integer.valueOf(fileInfos.size()));
 
     // URL is "./memory", can not determine offset and limit, let javascript in jsp determine
     // and redirect to "./memory?offset=xxx&limit=xxx"
@@ -75,8 +74,8 @@ public class WebInterfaceMemoryServlet extends HttpServlet {
       getServletContext().getRequestDispatcher("/memory.jsp").forward(request, response);
       return;
     } catch (IndexOutOfBoundsException iobe) {
-      request.setAttribute("fatalError", "Error: offset or offset + limit is out of bound, "
-          + iobe.getLocalizedMessage());
+      request.setAttribute("fatalError",
+          "Error: offset or offset + limit is out of bound, " + iobe.getLocalizedMessage());
       getServletContext().getRequestDispatcher("/memory.jsp").forward(request, response);
       return;
     } catch (IllegalArgumentException iae) {
